# medusa-agent-app

./: .gitignore  README.md  index.html  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs  paths.rs  tray.rs
src-tauri/src/commands/: config.rs  daemon.rs  doctor.rs  mod.rs  store.rs
src/components/: event-row.tsx  layout.tsx  onboarding.tsx  pause-button.tsx  posture-score.tsx  sidebar.tsx
src/hooks/: use-agent-state.ts  use-events.ts  use-notifications.ts
src/lib/: tauri.ts  utils.ts
src/routes/: activity.tsx  diagnostics.tsx  logs.tsx  policy.tsx  servers.tsx  settings.tsx  status.tsx  updates.tsx
